src/app.css
@import '$lib/fonts/atkinson-hyperlegible/atkinson-hyperlegible.css';
/* atkinson hyperlegible but with ligatures */
@import '$lib/fonts/lexica-ultralegible/lexica-ultralegible.css';
@import '$lib/fonts/minion-pro/minion-pro.css';
@import '$lib/fonts/vollkorn/vollkorn.css';
@import '$lib/fonts/comic-sans-ms/comic-sans-ms.css';

/* used for matscan simplified chinese translation */
@import '$lib/fonts/noto-sans-sc/noto-sans-sc.css';

:root {
	--background-color: #010502;
	/* used for gradients */
	--background-color-transparent: #01050200;

	--background-color-alt: #111;
	--background-color-alt-2: #222;
	--background-color-alt-3: #333;

	/* --text-color: #ddd; */
	/* --text-color: #cdd6f4; */
	--text-color: #f7f4f4;
	--text-color-alt: #ddd;
	--text-color-alt-2: #bbb;
	--text-color-alt-3: #999;

	--accent-color: #0dc7f9;

	--warning-color: #e6b450;
	--error-color: #d95757;
	--green: #aad94c;

	--fallback-font: system-ui, -apple-system, BlinkMacSystemFont, sans-serif, 'Noto Sans SC';

	--body-font: 'Minion Pro', var(--fallback-font);
	--body-size: 13.25pt;

	--code-text-size: 10pt;

	--title-font: 'Vollkorn', var(--fallback-font);
	--caption-font: 'Minion Pro Caption', var(--fallback-font);
}

*,
*:before,
*:after {
	box-sizing: border-box;
}

html,
body,
#page {
	height: 100%;
	width: 100%;
}

body {
	margin: 0;
	background-color: var(--background-color);
	color: var(--text-color);

	font-family: var(--body-font);
	font-size: var(--body-size);
	font-feature-settings: 'zero', 'lnum';
	font-weight: 500;
}

main {
	padding: 1em;
	margin: auto;
	flex: 1 0;
	width: 50em;
	max-width: 100%;
}

button,
.button {
	background-color: var(--background-color-alt);
	border: 1px solid var(--background-color-alt-3);
	color: var(--text-color);
	font-size: inherit;
	border-radius: 0.25em;
	padding: 0.2em 0.6em;
	cursor: pointer;
	font-family: inherit;
	box-shadow: 0 0.1em 0.2em #000;
	text-decoration: none;
	transition: background-color 200ms;
}
button:hover,
.button:hover {
	background-color: var(--background-color-alt-2);
}

p {
	margin-top: 0;
}

a {
	color: var(--accent-color);
	fill: var(--accent-color);
}

.center {
	width: fit-content;
	margin: 0 auto;
}

hr {
	background-color: var(--background-color-alt-2);
	border: 1px solid var(--background-color-alt-2);
	width: 90%;
	margin: 1rem auto;
}

img {
	max-height: 100%;
}
figcaption {
	text-align: center;
	color: var(--text-color-alt-3);
	font-family: var(--caption-font);
	font-size: 0.9em;
}
ul {
	margin-top: 0;
}

pre,
code {
	white-space: pre-wrap;
	tab-size: 2;
	font-size: var(--code-text-size);
}

.token.keyword {
	color: #ff8f40;
}
.token.function,
.token.builtin {
	color: #ffb454;
}
.token.number {
	color: #d2a6ff;
}
.token.string {
	color: #aad94c;
}
.token.comment {
	color: #acb6bf8c;
}
.token.class-name {
	color: #59c2ff;
}

body.light-theme,
body.extra-light-theme {
	--background-color: #fff;
	--background-color-transparent: #fff0;
	--background-color-alt: #f7f7f7;
	--background-color-alt-2: #eee;
	--background-color-alt-3: #ddd;

	--text-color: #000;
	--text-color-alt: #333;
	--text-color-alt-2: #666;
	--text-color-alt-3: #999;
}
body.extra-light-theme {
	filter: brightness(1) opacity(0.1);
}
body.extra-dark-theme {
	background-color: #000;
	filter: brightness(0.1);
}

body.sandcat-mode {
	--background-color: transparent;
	--background-color-alt: #0006;
}

h1,
h2,
h3,
h4,
h5 {
	font-family: var(--title-font);
	/* ligatures look bad in titles */
	font-variant-ligatures: no-common-ligatures;
}
h2 {
	margin-bottom: 0.3em;
}
h3 {
	font-size: 1.5em;
	margin-bottom: 0.4em;
}
h4 {
	font-size: 1.2em;
	margin-bottom: 0.4em;
}

@font-face {
	font-family: 'Press Start 2P';
	font-display: swap;
	src: url(/retro/pressstart2p.ttf) format('truetype');
}

